# server/pkg/spaced_repetition/v1.go
@@ -5,13 +5,15 @@ import (
 	"encoding/json"
 	"fmt"
 	"time"
+
+	"github.com/freshteapot/learnalist-api/server/api/alist"
 )
 
 type ItemInputV1 struct {
 	entry *HTTPRequestInputV1
 }
 
-func V1FromPOST(input []byte) ItemInputV1 {
+func V1FromPOST(input []byte, settings HTTPRequestInputSettings) ItemInputV1 {
 	item := ItemInputV1{}
 
 	json.Unmarshal(input, &item.entry)
@@ -19,12 +21,9 @@ func V1FromPOST(input []byte) ItemInputV1 {
 	b, _ := json.Marshal(item.entry.Data)
 	hash := fmt.Sprintf("%x", sha1.Sum(b))
 	item.entry.UUID = hash
-
-	item.entry.Settings.Level = Level0
-	now := time.Now().UTC()
-	whenNext := now.Add(Threshold0)
-	item.entry.Settings.Created = now.Format(time.RFC3339)
-	item.entry.Settings.WhenNext = whenNext.Format(time.RFC3339)
+	item.entry.HTTPRequestInput.Kind = alist.SimpleList
+	item.entry.HTTPRequestInput.Show = item.entry.Data
+	item.entry.Settings = settings
 	return item
 }
 
@@ -74,4 +73,16 @@ func (item ItemInputV1) IncrThreshold() {
 			break
 		}
 	}
+}
+
+func (item ItemInputV1) SetExtID(extID string) {
+	item.entry.Settings.ExtID = extID
+}
+
+func (item ItemInputV1) Reset(now time.Time) {
+	item.entry.Settings.Level = Level0
+	//now := time.Now().UTC()
+	whenNext := now.Add(Threshold0)
+	item.entry.Settings.Created = now.Format(time.RFC3339)
+	item.entry.Settings.WhenNext = whenNext.Format(time.RFC3339)
 }
